--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^12.0.6",
     "jquery": "^3.7.1",
     "jquery-nice-select": "^1.1.0",
     "jwt-decode": "^4.0.0",
