--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.10.0",
+    "@iconify/react": "^5.2.0",
+    "@mui/material": "^5.15.20",
+    "@mui/x-data-grid": "^7.13.0",
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-router": "^1.97.1",
     "antd": "^5.23.1",
@@ -18,6 +23,8 @@
     "bootstrap": "^4.2.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.0.6",
     "jquery": "^3.7.1",
@@ -25,8 +32,8 @@
     "jwt-decode": "^4.0.0",
     "magnific-popup": "^1.2.0",
     "mixitup": "^3.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-intl": "^7.1.0",
     "react-owl-carousel": "^2.3.3",
